# tuimodplayer

./: Cargo.toml  README.md
src/: app.rs  backend.rs  control.rs  logging.rs  main.rs  module_file.rs  module_source.rs  options.rs  player.rs  sink.rs  ui.rs  util.rs
src/backend/: cpal.rs  mod.rs  rodio.rs
src/playlist/: item.rs  loading.rs  mod.rs  playing.rs
src/ui/: color_scheme.rs  control.rs  display.rs  mod.rs
