[package]
name = "tuimodplayer"
version = "0.1.0"
authors = ["Kunshan Wang <wks1986@gmail.com>"]
edition = "2021"
description = "A text-user-interface module music player using libopenmpt"
license = "GPL-3.0"

[dependencies]
openmpt = { git = "https://github.com/sm-Fifteen/openmpt-rs" }
cpal = { version = "0.14.0" }
anyhow = "1.0.56"
zip = "0.6.2"
clap = { version = "3.2.8", features = ["derive"] }
tui = "0.19.0"
crossterm = "0.25.0"
atomic = "0.5.1"
log = { version = "0.4.16", features = ["std"] }
lazy_static = "1.4.0"
walkdir = "2"
num-traits = "0.2.15"
seqlock = "0.1.2"
