[package]
name = "tuimodplayer"
version = "0.1.0"
authors = ["Kunshan Wang <wks1986@gmail.com>"]
edition = "2021"
description = "A text-user-interface module music player using libopenmpt"
license = "GPL-3.0"

[dependencies]
openmpt = { git = "https://github.com/sm-Fifteen/openmpt-rs" }
cpal = { version = "0.15.3" }
anyhow = "1.0.56"
zip = "2.1.3"
clap = { version = "4.5.6", features = ["derive"] }
tui = "0.19.0"
crossterm = "0.29.0"
atomic = "0.6.0"
log = { version = "0.4.16", features = ["std"] }
lazy_static = "1.4.0"
walkdir = "2.5.0"
num-traits = "0.2.19"
seqlock = "0.2.0"
rand = "0.9.1"
