# Copyright 2022, 2024, 2025 Kunshan Wang
#
# This file is part of TUIModPlayer.  TUIModPlayer is free software: you can redistribute it
# and/or modify it under the terms of the GNU General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option) any later version.
#
# TUIModPlayer is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See
# the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with TUIModPlayer. If
# not, see <https://www.gnu.org/licenses/>.

[package]
name = "tuimodplayer"
version = "0.1.0"
authors = ["Kunshan Wang <wks1986@gmail.com>"]
edition = "2024"
description = "A text-user-interface module music player using libopenmpt"
license = "GPL-3.0"

[dependencies]
openmpt = { git = "https://github.com/sm-Fifteen/openmpt-rs" }
cpal = { version = "0.15.3" }
anyhow = "1.0.56"
zip = "2.1.3"
clap = { version = "4.5.6", features = ["derive"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
atomic = "0.6.0"
log = { version = "0.4.16", features = ["std"] }
walkdir = "2.5.0"
num-traits = "0.2.19"
seqlock = "0.2.0"
rand = "0.9.1"
